--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://thien.dev/">
     <meta property="og:title" content="Thien Nguyen - Web Developer">
     <meta property="og:description" content="He is mostly working with Laravel, WordPress and Vue.js. Particularly interested in open source, startup, and design.">
-    <meta property="og:image" content="/img/cover.png">
+    <meta property="og:image" content="img/cover.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://thien.dev/">
     <meta property="twitter:title" content="Thien Nguyen - Web Developer">
     <meta property="twitter:description" content="He is mostly working with Laravel, WordPress and Vue.js. Particularly interested in open source, startup, and design.">
-    <meta property="twitter:image" content="/img/cover.png">
+    <meta property="twitter:image" content="img/cover.png">
 
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
