--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <main>
         <div class="container">
             <div class="terminal">
-                <span class="hidden">Hello ✌️</span>
-                <span class="hidden">Welcome to Thien's personal site</span>
+                <span class="hidden">Hello!</span>
+                <span class="hidden">My name is Thien</span>
                 <span>$</span>
                 <span class="command"></span>
                 <span class="cursor"></span>
             </div>
-            <h2 class="title">Thien is a web developer 🧑🏼‍💻</h2>
-            <p>He is mostly working with <span class="fw laravel">Laravel</span>, <span class="fw wordpress">WordPress</span> and <span class="fw vue">Vue.js</span>. Particularly interested in open source, startup, and design.</p>
+            <h2 class="title">I am a web developer 🧑🏼‍💻</h2>
+            <p>I'm mostly working with <span class="fw laravel">Laravel</span>, <span class="fw wordpress">WordPress</span> and <span class="fw vue">Vue.js</span>. Particularly interested in open source, startup, and design.</p>
             <p>You may want to know more about him.</p>
             <nav>
                 <a href="https://github.com/tatthien" target="_blank">Github</a>
