--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="twitter:description" content="He is mostly working with Laravel, WordPress and Vue.js. Particularly interested in open source, startup, and design.">
     <meta property="twitter:image" content="/img/cover.png">
 
+    <link rel="icon" href="/img/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/modern-normalize.css">
