--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <h2 class="title">I am a web developer 🧑🏼‍💻</h2>
             <p>I'm mostly working with <span class="fw laravel">Laravel</span>, <span class="fw wordpress">WordPress</span> and <span class="fw vue">Vue.js</span>. Particularly interested in open source, startup, and design.</p>
-            <p>You may want to know more about him.</p>
+            <p>You may want to know more about me.</p>
             <nav>
                 <a href="https://github.com/tatthien" target="_blank">Github</a>
                 <a href="https://twitter.com/tat_thien" target="_blank">Twitter</a>
