Fix wrong Twitter handle

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>You may want to know more about me.</p>
             <nav>
                 <a href="https://github.com/tatthien" target="_blank">Github</a>
-                <a href="https://twitter.com/tat_thien" target="_blank">Twitter</a>
+                <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a>
                 <a href="https://linkedin.com/in/tatthien/" target="_blank">LinkedIn</a>
                 <a href="https://profiles.wordpress.org/tatthiennguyen/" target="_blank">WordPress</a>
             </nav>
